[gd_scene load_steps=17 format=3 uid="uid://dmp1uu2qvevev"]

[ext_resource type="PackedScene" uid="uid://b20uyj2a7snys" path="res://scenes/etc/scene_background.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/etc/title.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bswc06g8au3yg" path="res://scenes/components/transition_button/transition_button.tscn" id="4"]
[ext_resource type="FontFile" path="res://assets/fonts/title.tres" id="4_3xgrr"]
[ext_resource type="Texture2D" uid="uid://bhseyva7q33cc" path="res://assets/images/art1.png" id="4_qsc7y"]
[ext_resource type="Theme" uid="uid://cg33m0umsdbg0" path="res://assets/themes/global.tres" id="5"]

[sub_resource type="LabelSettings" id="LabelSettings_cc3u6"]
font = ExtResource("4_3xgrr")
font_size = 111
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwtyo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vp37h"]
bg_color = Color(0.823529, 0.85098, 0, 0.564706)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="LabelSettings" id="LabelSettings_7bhso"]
font = ExtResource("4_3xgrr")
font_size = 128
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cyuq2"]

[sub_resource type="LabelSettings" id="LabelSettings_nlgun"]
font = ExtResource("4_3xgrr")
font_size = 128
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t6tcp"]

[sub_resource type="LabelSettings" id="LabelSettings_jwbjn"]
font = ExtResource("4_3xgrr")
font_size = 128
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f8ymy"]

[sub_resource type="LabelSettings" id="LabelSettings_3um7v"]
font = ExtResource("4_3xgrr")
font_size = 128
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[node name="Title" type="Control"]
self_modulate = Color(0.34902, 0.160784, 0.619608, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5")
script = ExtResource("2")

[node name="Background" parent="." instance=ExtResource("1")]
layout_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qsc7y")

[node name="TitleMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 127.0
grow_horizontal = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 40

[node name="TitleLbl" type="Label" parent="TitleMarginContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Grandpa Frost: The Battle For Gifts"
label_settings = SubResource("LabelSettings_cc3u6")

[node name="ButtonsMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -772.0
offset_top = -714.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 2

[node name="NewGameBtn" parent="ButtonsMarginContainer/VBoxContainer" instance=ExtResource("4")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_dwtyo")
theme_override_styles/hover = SubResource("StyleBoxFlat_vp37h")
text = " 
 "
flat = false
scene_to_load = "res://scenes/etc/how_to_play.tscn"

[node name="Label" type="Label" parent="ButtonsMarginContainer/VBoxContainer/NewGameBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "New Game"
label_settings = SubResource("LabelSettings_7bhso")
horizontal_alignment = 1

[node name="SettingsBtn" parent="ButtonsMarginContainer/VBoxContainer" instance=ExtResource("4")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_cyuq2")
theme_override_styles/hover = SubResource("StyleBoxFlat_vp37h")
text = " 
 
"
flat = false
scene_to_load = "res://scenes/etc/settings.tscn"

[node name="Label" type="Label" parent="ButtonsMarginContainer/VBoxContainer/SettingsBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_nlgun")
horizontal_alignment = 1

[node name="CreditsBtn" parent="ButtonsMarginContainer/VBoxContainer" instance=ExtResource("4")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_t6tcp")
theme_override_styles/hover = SubResource("StyleBoxFlat_vp37h")
text = " 
 "
flat = false
scene_to_load = "res://scenes/etc/credits.tscn"

[node name="Label" type="Label" parent="ButtonsMarginContainer/VBoxContainer/CreditsBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits"
label_settings = SubResource("LabelSettings_jwbjn")
horizontal_alignment = 1

[node name="ExitBtn" type="Button" parent="ButtonsMarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
theme_override_styles/normal = SubResource("StyleBoxEmpty_f8ymy")
theme_override_styles/hover = SubResource("StyleBoxFlat_vp37h")
text = " "

[node name="Label" type="Label" parent="ButtonsMarginContainer/VBoxContainer/ExitBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_3um7v")
horizontal_alignment = 1

[connection signal="button_down" from="ButtonsMarginContainer/VBoxContainer/NewGameBtn" to="." method="_on_new_game_btn_button_down"]
[connection signal="pressed" from="ButtonsMarginContainer/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
